--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   font-family: 'Urbanist', sans-serif;
-  background: url(' https://imgur.com/HVc21gQ.jpg') no-repeat center center fixed;
+  background: url(' https://imgur.com/a/zr2o5v4.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #111;
 }
