--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Urbanist', sans-serif;
-  background: url('background.jpg') no-repeat center center fixed;
+  background: url('https://imgur.com/MuUjxK7.jpg') no-repeat center center fixed;
   background-size: cover;
   color: #222;
 }
