--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 /* Latar belakang */
 body {
   font-family: 'Poppins', sans-serif;
-  background-image: url('images/background-island.jpg');
+  background-image: url('images/https://imgur.com/MuUjxK7.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
